# finchat

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_LOG.md  MICROSERVICE_SEPARATION.md  PYTHON_DEVELOPMENT.md  README.md  middleware.ts  package-lock.json  package.json  test-purchase-date.csv  ux-audit-report.md
app/: page.tsx  page_bk.tsx
app/(auth)/register/: page.tsx
app/api/chat/: route.ts
app/api/portfolio/: route.ts
app/auth/me/: route.ts
app/dashboard/chat/: page.tsx
app/dashboard/portfolio/: page.tsx
components/auth/: login-form.tsx  register-form.tsx
components/chat/: chart-display.tsx  chat-interface.tsx  file-processor.tsx  llm-selector.tsx  message-bubble.tsx
components/portfolio/: portfolio-table.tsx
components/ui/: file-upload.tsx  input.tsx
docs/: CONVERSATION_ANALYTICS.md  LLM_interaction.md  USER_PAIN_POINTS_ANALYSIS.md  UX_TESTING_PLAN.md  architecture.md  chart_design.md  historical_prices_analysis.md
fastapi-service/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh  vercel.json
fastapi-service/api/: debug.py  index.py  test.py
fastapi-service/fastapi_portfolio_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.local.example  ARCHITECTURE-LLM-SERVICES.md  CHAT_HISTORY_FEATURE.md  FASTAPI_INTEGRATION.md  UX_PAIN_POINTS_REPORT.md  package-lock.json  package.json  test-api-call.js  test-fastapi-proxy.js  test-symbol-edit.js
frontend/prisma/: README.md  schema.prisma
frontend/scripts/: README.md  check-prices.ts  clear-prices.ts  populate-metrics.js  price-config.example22.json  price-config_0703.json  test-chat-price-integration.js  test-csv-export.ts  test-historical-prices.js  test-portfolio-price-integration.js  update-prices-advanced.ts  update-prices.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/examples/: analytics-usage-example.tsx  analytics-usage-guide.md  browser-console-demo (copy).js.txt  conversation-thread-example.ts  fastapi-test-messages.js  real-chat-tracking (copy).js.txt  simple-console-test.js  test-backend-fix.js
frontend/src/hooks/: use-chat-api.ts  use-form-validation.ts  use-langgraph-chat.ts  use-standard-form.ts  useChatHistory.ts  usePortfolioCRUD.ts  usePortfolioMetrics.ts  usePortfolioState.ts  useScrollManager.ts
frontend/src/lib/: admin-auth.ts  analytics-test.ts  asset-metrics-service.ts  auth.ts  backend-config.ts  chat-logger.ts  chat-service.ts  chat-simulation.ts  chat-triage-processor.ts  claude_notes.md  conversation-analytics.ts  csv-export.ts  email-service.ts  error-system.ts  fastapi-client.ts  financial-prompts.ts  guest-portfolio.ts  historical-price-service.ts  llm-config.ts  logger.ts  mcp-client.ts  number-utils.ts  portfolio-crud-handler.ts  portfolio-parser.ts  portfolio-service.ts  query-triage.ts  tax-utils.ts  unified-analysis-service.ts  validation.ts
hooks/: use-chat-api.ts
lib/: auth.ts  backend-config.ts  chat-service.ts  chat-simulation.ts  db.ts  fastapi-client.ts  financial-prompts.ts  guest-portfolio.ts  llm-service.ts  mcp-client.ts  portfolio-parser.ts  portfolio-service.ts
mcp-server/: .gitignore  README.md  finance_mcp_server.py  generic_mcp_server.py  start.sh
mcp-server/analyzers/: example_analyzer.py  finance_analyzer.py
prisma/: schema.prisma
services/fastapi-portfolio-service/: .gitignore  main.py  pyproject.toml  requirements.txt  test_optimization.py
services/mcp-server/: ANALYZER_GUIDE.md  README.md  pyproject.toml  requirements-generic.txt  setup.py
(+158 files in other folders)
