[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-portfolio-service"
version = "1.0.0"
description = "FastAPI microservice for portfolio analysis"
authors = [{name = "Finance App Team"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "yfinance>=0.2.28",
    "numpy>=1.26.0", 
    "pandas>=2.1.0",
    "python-multipart>=0.0.6",
    "scipy>=1.11.0",
    "textblob>=0.17.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]