# Local development configuration for uv
# This file is used only for local development with uv
# Railway deployment uses requirements.txt only

[project]
name = "fastapi-portfolio-service-dev"
version = "1.0.0"
description = "FastAPI microservice for portfolio analysis (local development)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "yfinance>=0.2.28",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "python-multipart>=0.0.6",
    "scipy>=1.11.0",
    "textblob>=0.17.1",
    "requests>=2.32.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]
